Fix card spacing

--- a/src/components/github_card/github_card.module.css
+++ b/src/components/github_card/github_card.module.css
@@ -53,7 +53,7 @@
 .headerTitle h1 {
   font-weight: 700;
   font-size: 1.75rem;
-  font-size: min(5.5vw, 1.75rem);
+  font-size: min(5.5vw, 1.5rem);
   margin: 0px;
 }
 
@@ -66,7 +66,7 @@
 
 .headerLogo {
   flex-basis: 2.2rem;
-  min-width: 2.2rem;
+  min-width: 1.5rem;
   flex-grow: 0;
   align-self: stretch;
 }
